# RustFrame

./: .gitignore  .output.txt  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  tauri.conf.json
.agent/: rules.md
.agent/skills/: add_feature.md
.agent/workflows/: build_macos.md  build_windows.md
.config/: nextest.toml
.github/: copilot-instructions.md
.github/workflows/: build-macos.yml  build-self-hosted-windows.yml  build-windows.yml  release.yml  tests.yml
capabilities/: default.json
docs/: PERFORMANCE_OPTIMIZATION.md  README.md
docs/archive/: 2026-01-07_border_capture_fix.md  2026-01-07_color_format_fix.md  2026-01-07_coordinate_system_architecture.md  2026-01-07_event_driven_optimization.md  README.md  refactoring-plan.md
docs/changelog/: README.md  v1.1.0.md  v1.56.0.md
docs/developer/: README.md  building.md  icon-embedding.md  known-issues.md  react-component-nesting-fix.md  refactoring-plan.md
docs/experiments/: 2026-01-07_window_visibility_tests.md
docs/profiles/: README.md  windows.md
docs/technical/: README.md  WINDOWS_LIMITATIONS.md  color-formats.md  gpu-optimization.md  macos-window-exclusion.md  macos-window-visibility.md  multi-monitor.md  shortcut-border-drag-issue.md  windows-window-exclusion.md
docs/user-guide/: README.md  faq.md  features.md  installation.md  macos-permissions.md  quick-start.md  settings.md  troubleshooting.md
icons/: icon.icns
resources/: default_settings.json
resources/default_settings/: linux.json  macos.json  windows.json
resources/locales/: de.json  en.json  fr.json  it.json  ja.json  ru.json  tr.json
resources/profiles/: version.json
resources/profiles/macos/: discord.json  shadow-cursor.json
resources/profiles/windows/: discord.json  obs.json  teams.json
src/: app_bootstrap.rs  app_lifecycle.rs  app_state.rs  capture_controller.rs  capture_deps.rs  config.rs  display_info.rs  lib.rs  logging.rs  main.rs  monitors.rs  platform.rs  platform_info.rs  platform_utils.rs  preview_border.rs  profiles.rs  rec_indicator.rs  settings.rs  settings_io.rs  shortcuts.rs  single_instance.rs  traits.rs  window_filter.rs
src/capture/: linux.rs  macos.rs  macos_mac_backup.rs  macos_sck.rs  mod.rs  windows.rs
src/commands/: locales.rs  mod.rs  profiles.rs  settings.rs  system.rs  windowing.rs
src/destination_window/: d3d11_renderer.rs  macos.rs  mod.rs  windows.rs
src/hollow_border/: linux.rs  macos.rs  mod.rs  windows.rs
src/platform/: colors.rs  coords.rs  window_enumerator.rs
src/platform/services/: linux.rs  macos.rs  mod.rs  shared_tauri.rs  windows.rs
src/separation_layer/: mod.rs  windows.rs
tests/: app_profiles.rs  config_colors.rs  platform_utils.rs  window_filter.rs
ui/: index.html  package-lock.json  package.json  tailwind.config.js
ui/src/: App.tsx  config.ts  featureFlags.ts  index.css
ui/src/components/: HelpOverlay.tsx  SettingsDialog.tsx  WindowExclusionTab.tsx
ui/src/i18n/: config.ts
ui/src/i18n/locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  ru.json  tr.json
ui/src/utils/: colors.ts
