[package]
name = "rustframe"
version = "1.0.0-macos"
edition = "2021"
authors = ["Salih Cantekin <salihcantekin@gmail.com>"]
description = "Cross-platform screen capture application with Tauri UI"
repository = "https://github.com/salihcantekin/RustFrame"
homepage = "https://github.com/salihcantekin/RustFrame"
documentation = "https://github.com/salihcantekin/RustFrame#readme"
readme = "README.md"
license = "MIT"
keywords = ["screen-capture", "cross-platform", "windows", "macos", "linux"]
categories = ["multimedia", "graphics"]
rust-version = "1.56.0"
exclude = ["target/", ".git/", ".github/", "*.zip", "ui/node_modules/"]

# Binary target
[[bin]]
name = "rustframe"
path = "src/main.rs"
bench = false
required-features = ["app"]

# Library for capture engine (can be used by other projects)
[lib]
name = "rustframe_capture"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
dirs = "5.0"

[dependencies]
# Tauri framework (app-only)
tauri = { version = "2.9", features = ["macos-private-api"], optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tauri-plugin-global-shortcut = { version = "2", optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
dirs = "5.0"
lazy_static = "1.5"
log = "0.4"
anyhow = "1.0"

# GPU rendering
wgpu = "22.0"
bytemuck = { version = "1.18", features = ["derive"] }
pollster = "0.3"

# Logging infrastructure
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "local-time", "ansi"] }
tracing-appender = "0.2"

# HTTP client for profile downloads
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["time", "sync"] }

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    # Foundation types
    "Foundation",
    "Foundation_Collections",
    
    # Windows.Graphics.Capture API
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    
    # Win32 Graphics APIs
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    
    # Win32 System APIs
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_System_Com",
    
    # UI and Window Management
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
    
    # Security
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D",
] }

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
cocoa = "0.26"
objc = "0.2"
block = "0.1"
libc = "0.2"
foreign-types-shared = "0.3"
metal = "0.29"
core-video-sys = "0.1"

# Linux-specific dependencies (placeholder for future)
[target.'cfg(target_os = "linux")'.dependencies]

[features]
default = ["custom-protocol", "app"]
app = ["tauri", "tauri-plugin-dialog", "tauri-plugin-shell", "tauri-plugin-global-shortcut"]
custom-protocol = ["tauri/custom-protocol"]
